Ace - modo Portugol, baseado no modo Pascal

--- a/app/src/main/assets/editor.html
+++ b/app/src/main/assets/editor.html
@@ -14,16 +14,15 @@
 </head>
 <body>
 
-<div id="editor">program Hello;
-begin
-    writeln ('Hello, world.');
-end.</div>
+<div id="editor">algoritmo
+escreva "Olá, mundo!"
+fim_algoritmo.</div>
 
 <script src="ace/ace.js" type="text/javascript" charset="utf-8"></script>
 <script>
     var editor = ace.edit("editor");
     editor.setTheme("ace/theme/textmate");
-    editor.session.setMode("ace/mode/pascal");
+    editor.session.setMode("ace/mode/portugol");
 </script>
 </body>
 </html>
