Interpretador funcionando com exemplo Olá, Mundo!

--- a/src/main/assets/editor.html
+++ b/src/main/assets/editor.html
@@ -6,9 +6,7 @@
 </style>
 </head>
 <body>
-<div id="editor">algoritmo
-escreva "Olá, mundo!"
-fim_algoritmo.</div>
+<div id="editor"></div>
 
 <script src="ace/ace.js"></script>
 <script src="editor.js"></script>
