Compleção de código (ver https://stackoverflow.com/a/27828826/1657502)

--- a/src/main/assets/editor.html
+++ b/src/main/assets/editor.html
@@ -7,8 +7,10 @@
 </head>
 <body>
 <div id="editor"></div>
-
 <script src="ace/ace.js"></script>
+<script src="ace/mode-portugol.js"></script>
+<script src="ace/theme-textmate.js"></script>
+<script src="ace/ext-language_tools.js"></script>
 <script src="editor.js"></script>
 </body>
 </html>
